[tool.poetry]
name = "oracle-tools"
version = "0.0.0"
description = "Paulissoft Application Tools for Oracle"
authors = ["Gert-Jan Paulissen"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ocifs = "^1.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.1"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
pip = "^24.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = 'fsspec.implementations.local,fsspec.core,ocifs,oci'
ignore_missing_imports = true
